# auth-ms

./: .envrc  .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  fastapi.env  flake.nix  prod.env  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  check.yml  ci.yml  docker.yml  docker_clean.yml  test.yml
alembic/: env.py
alembic/versions/: 2022_08_31_1342-190596fdaae0_add_user_columns.py  2022_09_01_1237-217346487384_add_auth_prefix_to_table_names.py  2022_10_08_1706-8dde6425760f_add_description_and_tags_to_users.py  2022_10_24_1251-8ab8a73f19be_add_newsletter_to_users.py  2022_11_04_1828-8e1474316c94_add_last_name_change_column_to_users.py  2023_02_19_2352-f15cd9186e12_add_user_infos_for_invoices.py  2023_09_07_1855-65d97cb437d1_add_email_verification_code_unique_.py  2023_12_03_1801-a9493f5d6165_create_avatar_table.py
api/: __init__.py  app.py  auth.py  environment.py  logger.py  redis.py  settings.py  utils.py
api/database/: database.py
api/endpoints/: __init__.py  contact.py  oauth.py  recaptcha.py  session.py  test.py  user.py
api/endpoints/internal/: __init__.py  user.py
api/exceptions/: contact.py  user.py
api/models/: __init__.py  oauth_user_connection.py  session.py  user.py
api/schemas/: contact.py  session.py  user.py
api/services/: gravatar.py  internal.py  shop.py
api/utils/: debug.py  email.py  jwt.py  recaptcha.py  utc.py  vat.py
templates/: reset_password.html  subscribe_newsletter.html  verify_email.html
tests/: fixtures.py  test_app.py  test_auth.py  test_logger.py  test_redis.py
tests/endpoints/: test_test.py  test_user.py
tests/models/: test_session.py  test_user.py
tests/utils/: test_jwt.py  test_recaptcha.py
